--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
+    "noImplicitThis": true,
+    "noEmitOnError": true,
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
-  }
+    "outDir": "lib",
+    "declaration": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
